--- a/BerlinClock.csproj
+++ b/BerlinClock.csproj
@@ -50,6 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BDD\BerlinClockFeatureSteps.cs" />
+    <Compile Include="Classes\BulbColour.cs" />
+    <Compile Include="Classes\Clock.cs" />
+    <Compile Include="Classes\ILampRow.cs" />
+    <Compile Include="Classes\Lamp.cs" />
+    <Compile Include="Classes\LampRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BDD\BerlinClockFeatureSteps.feature.cs">
       <AutoGen>True</AutoGen>
